[package]
name = "rusteventloop"
version = "0.1.0"
edition = "2021"

[dependencies]
compio = { version = "0.13.1", features = ["runtime", "time"] }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [ "Win32_UI_WindowsAndMessaging"] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.169" }

[target.'cfg(windows)'.dev-dependencies]
#windows-sys = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
block2 = "0.6.0"
#objc2 = { version = "0.6.0"}
[target.'cfg(not(any(windows, target_os = "macos", target_os="ios")))'.dependencies]
glib = "0.20"