[package]
name = "rusteventloop"
version = "0.1.0"
edition = "2021"

[dependencies]
compio = { version = "0.13.2", features = ["runtime", "time"] }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [ "Win32_UI_WindowsAndMessaging"] }
compio-driver = { version = "0.6.1", features = ["iocp-wait-packet"] }
#compio = { version = "0.13.1", features = ["runtime", "time", "iocp-wait-packet"] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.169" }

[target.'cfg(linux)'.dependencies]
compio-driver = { version = "0.6.1", features = ["io-uring-socket", "io-uring"] }

[target.'cfg(windows)'.dev-dependencies]
#windows-sys = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
core-foundation = "0.10.0"
block2 = "0.6.0"
#objc2 = { version = "0.6.0"}

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.4.0-beta2", features = ["appkit"] }


[target.'cfg(not(any(windows, target_os = "macos", target_os="ios", target_os="android")))'.dependencies]
glib = "0.20"
# only needed for gtk
gtk4 = "0.9.5"

[target.'cfg(not(any(windows, target_os = "macos", target_os="ios", target_os="android")))'.dev-dependencies]
